# async_course

./: .gitignore  README.md  pyproject.toml  requirements.txt
async_course/: async.bib  db.sqlite3  manage.py  requirements.txt
async_course/analytics/: mixins.py
async_course/assignments/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
async_course/assignments/migrations/: 0001_initial.py  0002_alter_assignment_options_assignment_active.py  0003_assignment_peer_review.py  0004_alter_assignment_slug.py  0005_alter_submission_upload.py  0006_alter_submission_upload.py  0007_submission_mime.py  0008_alter_submission_mime_alter_submission_upload.py  0009_assignment_has_submissions.py  0010_assignmentsubmission.py  0011_rename_assignmentsubmission_assignmentexample.py
async_course/async_course/: asgi.py  settings.py  urls.py  wsgi.py
async_course/common/: email.py  mixins.py  urls.py  views.py
async_course/events/: admin.py  models.py
async_course/lai_619/: apps.py  grades.py
async_course/pages/: forms.py  models.py  urls.py  views.py
async_course/pandoc_markdown_field/: __init__.py  temp_file.py
async_course/posts/: forms.py  models.py  urls.py  views.py
async_course/profiles/: apps.py  forms.py  mixins.py  models.py  signals.py  urls.py  views.py
async_course/pubref/: README.md  admin.py  apps.py  formatting.py  forms.py  models.py  pandoc.py  urls.py  views.py
async_course/reviews/: admin.py  email.py  forms.py  models.py  urls.py  views.py
async_course/zotapi/: api.py  apps.py  sql.py
tests/: test_async_course.py
(+107 files in other folders)
