[tool.poetry]
name = "async_course"
version = "0.1.0"
description = ""
authors = ["Chris Proctor <github.com@accounts.chrisproctor.net>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
django-markdown = "^0.8.4"
django-model-utils = "^4.2.0"
pybtex = "^0.24.0"
arrow = "^1.2.2"
pybtex-apa7-style = "^0.1.0"
python-magic = "^0.4.27"
gunicorn = "^20.1.0"
JSON-log-formatter = "^0.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
